# rocket_experiment

./: Cargo.toml  Rocket.toml
resources/: about.html  already.html  confirm.html  error.html  failure.html  index.html  killergame.html  login.html  pastebin.html  presenze.html  style.css  success.html
resources/error/: 404.html  500.html
resources/template/: common.js
src/: auth.rs  course.rs  legacy.rs  main.rs
templates/: error.hbs
