[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Lorenzo <lorenzofersteam@live.it>"]

[dependencies]
rocket = "0.3.11"
rocket_codegen = "0.3.11"
#diesel = { version = "1.3.0", features = ["mysql"] }
#diesel_codegen = { version = "0.16.0", features = ["mysql"] }

[dependencies.rocket_contrib]
version = "0.3.11"
default-features = false
features = ["handlebars_templates", "tera_templates"]
