
[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Lorenzo <lorenzofersteam@live.it>"]

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
#diesel = { version = "1.3.0", features = ["mysql"] }
#diesel_codegen = { version = "0.16.0", features = ["mysql"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "tera_templates"]
